# qt_widgets_starterapp

./: CMakeLists.txt  Dockerfile  main.cpp  readme.md  run.sh
